# Sotuken

./: CMakeLists.txt  note.txt  test  test.c  token.txt
Condensation/: note.txt
Condensation/Blur_compare/heightMap/: Makefile  main  main.cpp
Condensation/Code/Shaders/: default.frag  plane.frag  plane.vert  sphere.frag  sphere.vert
Condensation/Code/heightMap/: Makefile  heightMap  heightMap.cpp
Condensation/Code/icosphere/: Makefile  dummy.txt  icosphere.cpp  icosphere.h  test.cpp
Condensation/Document/: .~lock.Draft_Mid_JP.docx#  Draft_Mid.docx  Draft_Mid_JP.docx  Mid Term Presentation.txt
Condensation/dft/: Makefile  main  main.cpp
Condensation/metaball/: note.txt
Reference/template/: article.tex  sample.eps
glad/src/: glad.c
lab_practice/01/: camera  camera.cc  convert  convert.cc  detect  detect.cc  note.txt  test  test.cpp
lab_practice/02/: Makefile  block  block.cc  noise  noise.cc  note.txt  point  point.cc
lab_practice/03/: Makefile  RCcar  RCcar.c  glut-0  glut-0.c  glut-1  glut-1.c  glut-2  glut-2.c
lab_practice/04/: gui  gui.c  mr  mr.cc  shot  shot.cc  shot.txt
lab_practice/05/: cvdemo2  cvdemo2.cc
lab_practice/06/: Makefile  bgrm  bgrm.cc  bgrm2.cc  bgrm3.cc  cvdemo2  cvdemo2.cc  rgbd  rgbd.cc  test  test.cc
lab_practice/07/: Makefile  color.frag  color.vert  color2.frag  color2.vert  depth.frag  depth.vert  depth2.frag  depth2.vert  flat.frag  flat.vert  fur.frag  glsl  glsl.c  gouraud.frag  gouraud.vert  normal.frag  normal.vert  phong.frag  phong.vert
lab_practice/artk/: artk.c  simpleTest
learnGLFW/lab/01_window/: CMakeLists.txt
learnGLFW/lab/01_window/src/: window.cpp
learnGLFW/lab/04_organizing/: CMakeLists.txt
learnGLFW/lab/04_organizing/src/: 04organizing.cpp  EBO.cpp  VAO.cpp  VBO.cpp  shaderClass.cpp
soturon/: flow_base.drawio  flowchart.eps  real _cond.eps  result.eps  result1.eps  result2.eps  video.webm
worked(unix)/note/: orgainzing.txt
worked(unix)/src/: 04organizing  04organizing.cpp  VAO.cpp  shaderClass.cpp
(+279 files in other folders)
